<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/drawer_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/white"
  tools:openDrawer="start">

  <co.photopon.views.InfiniteViewPager
    android:id="@+id/view_pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

  <android.support.design.widget.NavigationView
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start">

    <LinearLayout
      android:id="@+id/nav_header"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@android:color/white"
      android:clickable="true"
      android:focusable="true"
      android:orientation="vertical">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:padding="16dp">

        <ImageButton
          android:id="@+id/ib_settings"
          android:layout_width="24dp"
          android:layout_height="wrap_content"
          android:layout_alignBottom="@+id/iv_logo"
          android:layout_alignParentEnd="true"
          android:layout_alignTop="@+id/iv_logo"
          android:layout_centerVertical="true"
          android:background="@color/transparent"
          android:scaleType="centerInside"
          android:src="@drawable/ic_gear"
          android:tint="@color/pink" />

        <ImageView
          android:id="@+id/iv_logo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_marginEnd="32dp"
          android:layout_marginStart="32dp"
          android:layout_marginTop="32dp"
          android:scaleType="centerInside"
          android:src="@drawable/logo_black" />
      </RelativeLayout>

      <Button
        android:id="@+id/bt_menu_notifications"
        style="@style/Button.Menu"
        android:text="@string/menu_notifications" />

      <Button
        android:id="@+id/bt_menu_friends"
        style="@style/Button.Menu"
        android:text="@string/menu_friends" />

      <Button
        android:id="@+id/bt_menu_gifts"
        style="@style/Button.Menu"
        android:text="@string/menu_gifts" />

      <Button
        android:id="@+id/bt_menu_wallet"
        style="@style/Button.Menu"
        android:text="@string/menu_wallet" />

      <Button
        android:id="@+id/bt_menu_create"
        style="@style/Button.Menu"
        android:text="@string/menu_create" />

      <Button
        android:id="@+id/bt_menu_send"
        style="@style/Button.Menu"
        android:text="@string/menu_sent_photopons" />

      <Button
        android:id="@+id/bt_menu_sign_out"
        style="@style/Button.Menu.Small"
        android:text="@string/menu_log_out" />
    </LinearLayout>

  </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
