<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <TextView
    android:id="@+id/tv_choose_username"
    style="@style/TextView.ValidatePhone.Title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:text="@string/verify_username" />

  <TextView
    android:id="@+id/tv_validate_phone"
    style="@style/TextView.ValidatePhone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:text="@string/verify_username_description" />

  <EditText
    android:id="@+id/et_username"
    style="@style/EditText.ValidatePhone"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="8dp" />

  <Button
    android:id="@+id/bt_register"
    style="@style/Button.ValidatePhone"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="8dp"
    android:text="@string/verify_username_button" />

  <Button
    android:id="@+id/bt_later"
    style="@style/Button.ValidateLater"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="8dp"
    android:text="@string/verify_later" />
</LinearLayout>