<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <TextView
    android:id="@+id/tv_validate_title"
    style="@style/TextView.ValidatePhone.Title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:text="@string/verify_phone" />

  <TextView
    android:id="@+id/tv_validate_phone"
    style="@style/TextView.ValidatePhone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:text="@string/verify_description" />

  <ru.kolotnev.formattedittext.MaskedEditText
    android:id="@+id/et_validate_code"
    style="@style/EditText.ValidatePhone"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="8dp"
    app:mask="+\1 (999) 999 - 9999"
    app:placeholder="_" />

  <Button
    android:id="@+id/bt_validate_code"
    style="@style/Button.ValidatePhone"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="8dp"
    android:text="@string/verify_button" />

  <Button
    android:id="@+id/bt_later"
    style="@style/Button.ValidateLater"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="8dp"
    android:text="@string/verify_later" />
</LinearLayout>