<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <TextView
    android:id="@+id/tv_validate_title"
    style="@style/TextView.ValidatePhone.Title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:text="@string/verify_code_title" />

  <TextView
    android:id="@+id/tv_validate_phone"
    style="@style/TextView.ValidatePhone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:text="@string/verify_code_description" />

  <ru.kolotnev.formattedittext.MaskedEditText
    android:id="@+id/et_validate_code"
    style="@style/EditText.ValidatePhone"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="8dp"
    app:mask="999999"
    app:placeholder="" />

  <Button
    android:id="@+id/bt_validate_code"
    style="@style/Button.ValidatePhone"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="8dp"
    android:text="@string/verify_code_button" />

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
      android:id="@+id/bt_cancel"
      style="@style/Button.ValidateLater"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_margin="8dp"
      android:text="@android:string/cancel" />

    <Button
      android:id="@+id/bt_resend"
      style="@style/Button.ValidateLater"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_margin="8dp"
      android:text="@string/verify_resend" />
  </RelativeLayout>
</LinearLayout>