<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/white"

  android:orientation="vertical">

  <RelativeLayout
    android:id="@+id/layout_settings"
    style="@style/Layout.Title.Settings">

    <ImageButton
      android:id="@+id/ib_close"
      style="@style/ImageButton.TitleBar.Close" />

    <TextView
      style="@style/TextView.FragmentTitle"
      android:text="@string/notifications_title" />

  </RelativeLayout>

  <ImageView
    android:id="@+id/iv_avatar"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_gravity="center_horizontal"
    android:layout_margin="8dp" />

  <TextView
    android:id="@+id/tv_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="@font/montserrat_medium"
    android:padding="8dp"
    android:text="Tyler"
    android:textAlignment="center"
    android:textColor="@android:color/black"
    android:textSize="18dp" />

  <View style="@style/Separator" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="@font/montserrat_medium"
    android:paddingEnd="8dp"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    android:text="@string/settings_number"
    android:textColor="@android:color/black" />

  <TextView
    android:id="@+id/tv_phone"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="@font/montserrat_medium"
    android:padding="8dp"
    android:text="19736007440"
    android:textColor="@color/light_grey" />

  <View style="@style/Separator" />

  <Button
    style="@style/Button.Transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="@font/montserrat_medium"
    android:padding="8dp"
    android:text="@string/settings_merchant"
    android:textAlignment="textStart"
    android:textColor="@color/pink" />

  <View style="@style/Separator" />

  <Button
    android:id="@+id/bt_change_number"
    style="@style/Button.Pink"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:fontFamily="@font/montserrat_medium"
    android:text="@string/settings_change_number" />

</LinearLayout>
