<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <RelativeLayout
    android:id="@+id/layout_share_gifts"
    style="@style/Layout.Title.ShareGift">

    <ImageButton
      android:id="@+id/ib_close"
      style="@style/ImageButton.TitleBar.Close" />

    <TextView
      style="@style/TextView.FragmentTitle"
      android:text="@string/share_gift_title" />

    <ImageButton
      android:id="@+id/ib_check_circle"
      style="@style/ImageButton.TitleBar.CheckCircle" />
  </RelativeLayout>

  <android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/layout_share_gifts">

    <android.support.v7.widget.RecyclerView
      android:id="@+id/recycler_view"
      style="@style/RecyclerView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/layout_share_gifts" />

  </android.support.v4.widget.SwipeRefreshLayout>

  <LinearLayout
    android:id="@+id/layout_no_friends"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <TextView
      android:id="@+id/tv_empty_list"
      style="@style/TextView.EmptyList"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="8dp"
      android:text="@string/share_gift_empty" />

    <Button
      android:id="@+id/bt_add_friend"
      style="@style/Button.Pink"
      android:layout_width="250dp"
      android:layout_height="40dp"
      android:text="@string/add_friend" />

  </LinearLayout>

</RelativeLayout>
